policies/shared/ServiceMonitor.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: configure-service-monitor-labelling-schema
spec:
  rules:
    - name: configure-service-monitor-labelling-schema
      match:
        resources:
          kinds:
          - monitoring.coreos.com/v1/ServiceMonitor
      mutate:
        patchesJson6902: |-
          spec:
            endpoints:
              - relabelings:
                  # Service Monitors are currently only supported on management clusters so we can enforce the cluster_id and cluster_type.
                - replacement: "[[ .Values.managementCluster.name ]]"
                  targetLabel: cluster_id
                - replacement: "management_cluster"
                  targetLabel: cluster_type
                - replacement: "[[ .Values.provider.kind ]]"
                  targetLabel: provider
                - replacement: "[[ .Values.managementCluster.name ]]"
                  targetLabel: installation
                - sourceLabels: [__meta_kubernetes_namespace]
                  targetLabel: namespace
                - sourceLabels: [__meta_kubernetes_pod_name]
                  targetLabel: pod
                - sourceLabels: [__meta_kubernetes_pod_container_name]
                  targetLabel: container
                - sourceLabels: [__meta_kubernetes_pod_node_name]
                  targetLabel: node
                - sourceLabels: [__meta_kubernetes_node_label_role]
                  targetLabel: role
                - sourceLabels: [__meta_kubernetes_node_label_role]
                  regex: ""
                  targetLabel: role
                  replacement: "worker"
