policies/shared/Silence.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: always-allow-heartbeat
spec:
  rules:
    - name: always-allow-heartbeat
      match:
        resources:
          kinds:
          - monitoring.giantswarm.io/v1alpha1/Silence
      mutate:
        patchesJson6902: |-
          - path: "/spec/matchers/-"
            op: add
            value: {"name": "alertname", "value": "Heartbeat", "isEqual": false, "isRegex": false}
